<resources>
    <string name="app_name">Stronger Everyday</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Tab name for Home [CHAR LIMIT=20] -->
    <string name="tab_home">Home</string>

    <!-- Tab name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="tab_workoutlist">Workout</string>

    <!-- Indicates when a workout was last completed. Note that there should be a colon at the end [CHAR LIMIT=40] -->
    <string name="exercise_last_completed">Last completed:</string>

    <!-- Text on the begin workout button [CHAR LIMIT=40] -->
    <string name="begin_workout">Begin Workout</string>

    <!-- Text on the "end workout" button [CHAR LIMIT=40] -->
    <string name="end_workout">End Workout</string>

    <!-- Text for the title of the Create Workout activity [CHAR LIMIT=40] -->
    <string name="workout_editor_activity_title_create_workout">Create Workout</string>

    <!-- Text for the title of the Create Exercise activity [CHAR LIMIT=40] -->
    <string name="exercise_editor_activity_title_create_exercise">Create Exercise</string>

    <!-- Text on the save button [CHAR LIMIT=15] -->
    <string name="action_save">Save</string>

    <!-- Text for the "delete" menu option [CHAR LIMIT=15] -->
    <string name="action_delete">Delete</string>

    <!-- Text for the "no" option the negative confirmation button [CHAR LIMIT=15] -->
    <string name="negative_button_no">No</string>


    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Units ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

    <!-- Text for the units Kilograms [CHAR LIMIT=15] -->
    <string name="units_not_applicable">N/A</string>
    <!-- Text for the units miles [CHAR LIMIT=15] -->
    <string name="units_kilograms">Kg</string>
    <!-- Text for the units Pounds [CHAR LIMIT=15] -->
    <string name="units_pounds">lbs</string>
    <!-- Text for the units Minutes [CHAR LIMIT=15] -->
    <string name="units_minutes">mins</string>
    <!-- Text for the units Seconds [CHAR LIMIT=15] -->
    <string name="units_seconds">secs</string>
    <!-- Text for the units Kilometers [CHAR LIMIT=15] -->
    <string name="units_kilometers">Km</string>
    <!-- Text for the units N/A [CHAR LIMIT=15] -->
    <string name="units_miles">miles</string>

    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~ Exercise Editor Activity ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

    <!-- Titles -->
    <!-- Name of the overview title in the exercise editor [CHAR LIMIT=15] -->
    <string name="exercise_editor_title_overview">Exercise Overview</string>
    <!-- Name of the details title in the exercise editor [CHAR LIMIT=15] -->
    <string name="exercise_editor_title_details">Exercise Details</string>

    <!-- Labels -->
    <!-- Name of the name lable in the exercise editor [CHAR LIMIT=15] -->
    <string name="exercise_editor_lable_name">Name</string>
    <!-- Name of the exercise category lable in the exercise editor [CHAR LIMIT=15] -->
    <string name="exercise_editor_lable_exercise_category">Category</string>
    <!-- Name of the units lable in the exercise editor [CHAR LIMIT=15] -->
    <string name="exercise_editor_lable_units">Units</string>
    <!-- Name of the number of sets lable in the exercise editor [CHAR LIMIT=15] -->
    <string name="exercise_editor_lable_num_sets">Number of Sets</string>
    <!-- Name of the minimum number of reps lable in the exercise editor [CHAR LIMIT=15] -->
    <string name="exercise_editor_lable_min_num_reps">Minimum Reps</string>
    <!-- Name of the maximum number of reps lable in the exercise editor [CHAR LIMIT=15] -->
    <string name="exercise_editor_lable_max_num_reps">Maximum Reps</string>

    <!-- Input Field Text Hints -->
    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_exercise_name">Benchpress/Squats/Curls/...</string>
    <!-- Text hint for exercise category field in the editor [CHAR LIMIT=30] -->
    <string name="hint_exercise_category">Chest/Full Body/Cardio/...</string>
    <!-- Text hint for number of sets input field in the editor [CHAR LIMIT=30] -->
    <string name="hint_exercise_num_sets">3</string>
    <!-- Text hint for minimum number of reps input field in the editor [CHAR LIMIT=30] -->
    <string name="hint_exercise_min_num_reps">6</string>
    <!-- Text hint for maximum number of reps input field in the editor [CHAR LIMIT=30] -->
    <string name="hint_exercise_max_num_reps">15</string>


    <!-- Strings for the Workout Activity -->
    <string name="workout_add_element_dialog_title">Select an element to add to the workout</string>
    <string name="dialog_option_new_exercise">New Exercise</string>
    <string name="dialog_option_existing_exercise">Existing Exercise</string>
    <string name="dialog_option_video">Video</string>
    <string name="dialog_option_title">Title</string>

</resources>
